--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   json_serializable: ^6.3.1
+  modal_progress_hud_nsn: ^0.3.0
 
 dev_dependencies:
   flutter_test:
