--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   http: ^0.13.5
   json_serializable: ^6.3.1
   modal_progress_hud_nsn: ^0.3.0
+  image_picker: ^0.8.5+3
+  
 
 dev_dependencies:
   flutter_test:
